# forza-arendal

./: .gitignore  404.html  CNAME  generate_tables.py  hello.py  index.html  mkdocs.yml  naomi.html  pyproject.toml  sitemap.xml  table.html  table.md  table_converter.py
.github/workflows/: run_markdown_generator.yml
arrangementer/: index.html
assets/graphs/: 2025-06-16.json
assets/images/logo/: forza.eps
assets/tables/: 2_divisjon_menn_avdeling_1.html  3.div_Kvinner_avd_Sør.html  PostNord-ligaen_avd._1.html  Treningskamper_seniorlag_NFF_Agder_2025.html
backend/: convert.py  markdown_generator.py  requirements.txt  scrape.py  tables_pipeline.py
blog/: index.html
blog/2025/04/15/egen-nettside-for-forza-arendal/: index.html
blog/2025/04/15/endelig-opprykk/: index.html
blog/2025/04/30/en-rolig-start/: index.html
blog/2025/05/16/arendal-fotball--fra-2024-til-2025-/: index.html
blog/2025/05/18/aust-agder-derby-på-fotballens-nasjonaldag/: index.html
blog/2025/05/21/før-kampen-mot-brann-2/: index.html
blog/2025/05/25/status-og-veien-mot-opprykk-2025/: index.html
blog/2025/05/26/oppsummering-runde-7/: index.html
blog/2025/05/27/-arendal-fotball-satser-på-lokalfotballen-/: index.html
blog/2025/06/01/-arendal-fotball-satser-på-lokalfotballen-/: index.html
blog/2025/06/01/arendal-fotball-satser-på-lokalfotballen/: index.html
blog/2025/06/02/oppsummering-runde-8/: index.html
blog/2025/06/05/før-runde-9-brattvåg-h--eksklusivt-intervju/: index.html
blog/2025/06/06/før-runde-9-brattvåg-hjemme-og-eksklusivt-intervju/: index.html
blog/2025/06/08/oppsummering-runde-9-brattvåg-h/: index.html
blog/2025/06/13/før-runde-10-lysekloster-b/: index.html
blog/2025/06/16/runde-10-oppsummering/: index.html
blog/2025/06/19/før-runde-11-vard-haugesund-b/: index.html
blog/2025/06/24/etter-runde-11-endelig-en-borteseier/: index.html
blog/2025/06/25/før-runde-12-eik-tønsberg-h/: index.html
blog/2025/07/01/halvspilt-sesong--hva-nå-arendal/: index.html
blog/2025/07/02/før-runde-12-pors-b/: index.html
blog/2025/07/05/oppsummering-runde-12-pors-b/: index.html
blog/2025/07/05/oppsummering-runde-13-pors-b/: index.html
blog/2025/07/25/oppsummering-av-vårsesongen-2025/: index.html
blog/2025/07/25/sommerferie-og-fotballtanker/: index.html
blog/2025/08/08/før-runde-14-eik-tønsberg-b/: index.html
blog/2025/08/11/etter-runde-14-reisebrev-fra-tønsberg/: index.html
blog/2025/08/13/lokalderby-drama-arendal-slår-jerv-3-2-etter-ekstraomganger/: index.html
blog/2025/08/15/før-runde-16-notodden-h/: index.html
blog/archive/2025/: index.html
blog/archive/2026/: index.html
blog/category/arendal-fotball/: index.html
blog/category/nyheter/: index.html
blog/category/stampub/: index.html
blog/page/2/: index.html
blog/page/3/: index.html
blog/page/4/: index.html
blog/page/5/: index.html
borteturer/: index.html
butikk/: index.html
css/: extra.css
docs/: arrangementer.md  borteturer.md  butikk.md  index.md  naomi.html  om_oss.md  podcast.md  rpsls.html  sanger.md  tabell.md
docs/assets/graphs/: 2025-06-16.py
docs/assets/images/logo/: favicon-white_base64.txt  favicon_base64.txt
docs/assets/tabeller/: a-lag_herrer.csv
docs/assets/tables/: 2_divisjon_menn_avdeling_1.html  3.div_Kvinner_avd_Sør.html  3_div_kvinner_region_sør.html  PostNord-ligaen_avd._1.html  Treningskamper_seniorlag_NFF_Agder_2025.html
docs/blog/: .authors.yml  index.md
docs/blog/posts/: 2025-04-16.md  2025-04-30.md  2025-05-16.md  2025-05-18.md  2025-05-21.md  2025-05-25.md  2025-05-26.md  2025-05-27.md  2025-06-02.md  2025-06-06.md  2025-06-08.md  2025-06-13.md  2025-06-16.md  2025-06-19.md  2025-06-24.md  2025-06-25.md  2025-07-01.md  2025-07-02.md  2025-07-05.md  2025-07-25.md  2025-08-08.md  2025-08-11.md  2025-08-13.md  2025-08-15.md  2025-08-18.md  2025-08-21.md  2025-08-29.md  2025-08-30.md  2025-08-31.md  2025-09-04.md  2025-09-08.md  2025-09-12.md  2025-09-13.md  2025-09-25.md  2025-10-02.md  2025-10-05.md  2025-10-06.md  2025-10-28.md  2025-10-30.md  2026-03-14.md  (+3 more)
docs/butikk/: index.md  medlemsfordeler.md
docs/css/: extra.css  forza-icons.css
docs/javascripts/: vipps-checkout-button.js
docs/medlem/: index.md
docs/om_oss/: historie.md  index.md  kontaktinformasjon.md  styre.md
docs/stylesheets/: extra.css
medlem/: index.html
medlem/medlemsfordeler/: index.html
om_oss/: index.html
om_oss/historie/: index.html
om_oss/kontaktinformasjon/: index.html
om_oss/styre/: index.html
podcast/: index.html
sanger/: index.html
search/: search_index.json
tabell/: index.html
(+27 files in other folders)
